# http-client-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/http_client_mcp/: __init__.py  server.py
